--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "boolean", "ENABLE_LOG_PRINTING", "true"
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "boolean", "ENABLE_LOG_PRINTING", "false"
         }
     }
     compileOptions {
