--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    // for latest version of activity & other classes
     implementation 'androidx.appcompat:appcompat:1.5.0'
 
     // for activity lifecycle
